objects/Agreement__c.object
<CustomObject>
    <description>CDN Agreements</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Account Selected Must be A Parent Account or Parent Partner Account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>CDN_Agreements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Remark__c</fullName>
        <label>Data Sync Remark</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Status__c</fullName>
        <label>Data Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Sync_Time__c</fullName>
        <label>Data Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Agreement Number</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Account</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>spansion</value>
        </filters>
        <label>All - Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Account1</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Account2</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All - Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Qualcomm</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>FAIRCHILD</value>
        </filters>
        <label>All - arm</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreement Numbers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>